static/css/custom.css
/* My big name main page*/ 
:root{
  --primary: peru !important;
}
.masthead .masthead-heading {
    letter-spacing: 15px !important;
    font-Size: 4rem !important;
    color: white!important;
  }

/* my picture main page */
.masthead .masthead-avatar {
    width: 35rem !important
  }

/* My job title */
.masthead .masthead-subheading {
    letter-spacing: 10px !important;
    color: white !important;
    font-style: italic !important;
}

/* Name left side header */ 
.navbar-brand{
  letter-spacing: 5px !important

}

/*The header's component*/ 
.nav-link{
  letter-spacing: 5px !important
}

/*The menu button when screen is shrunk*/
.navbar-toggler{
  letter-spacing: 2px !important;
  color: black!important;
  background-color: #ffc107 !important;
}

.navbar-toggler:hover, .navbar-toggler:focus {
  background-color: indigo;
  color: white !important; 
  background:
        linear-gradient(red, transparent),
        linear-gradient(to top left, lime, transparent),
        linear-gradient(to top right, blue, transparent) !important;
    background-blend-mode: screen !important;
  border-color: black !important;

}

/* The headings for each sections */ 
.page-section .page-section-heading{
  letter-spacing: 5px !important;
  color: black !important; 
}

/*The footer components' headings */
.mb-4{
  letter-spacing: 5px !important;
  color: black !important;
}

/*background for masthead*/ 
.masthead{
  background-image: linear-gradient(#ffc107, #FEED01);

  

  background:
        linear-gradient(red, transparent),
        linear-gradient(to top left, lime, transparent),
        linear-gradient(to top right, blue, transparent) !important;
    background-blend-mode: screen !important;

  /*-webkit-animation: bg-pan-left 15s infinite both !important;
  animation: bg-pan-left 15s infinite both !important; */
}

/*Nav-bar background color*/
.navbar{
  background-color: black !important;
}

.footer{
  /*ackground-color: #ffc107 !important;*/
  background-image: linear-gradient(#ffc107, #FFED01) !important
  /*background:
        linear-gradient(red, transparent),
        linear-gradient(to top left, blue, transparent),
        linear-gradient(to top right, lime, transparent) !important;
    background-blend-mode: screen !important;*/
}

/* For the line separating the headers */
.divider-custom .divider-custom-line{
  background-color: black !important;
}

/* For the icon that separates the headers */
.divider-custom .divider-custom-icon{
  color: black !important; 
}

/* This whole section is for masthead icon divider */
.divider-custom1 .divider-custom-line3 {
  width: 100% !important;
  max-width: 7rem !important;
  height: 0.25rem !important;
  background-color: white !important;
  border-radius: 1rem !important; 
  border-color: white !important;
}

/* Read above*/
.divider-custom1 .divider-custom-icon3 {
  color: white !important;
  font-size: 2rem !important;
}
/* For the masthead main heading */
.divider-custom1.divider-light .divider-custom-line3 {
  background-color: white !important;
}

/*For the masthead subheading main */
.divider-custom1.divider-light .divider-custom-icon3 {
  color: white !important;
}

/* For the main masthead heading icon divider */ 
.divider-custom1 {
  margin: 1.25rem 0 1.5rem !important;
  width: 100% !important;
  display: -webkit-box !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: center !important;
  -ms-flex-pack: center !important;
  justify-content: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
}

.lead{
  color: black !important;
}

/* Coloring for porfolio grid section*/ 
.portfolio{
  /*background-image: linear-gradient(to right, black, #2c3e50) !important;*/
  background-color: black !important;
  
}

/* Configurations for footer location and about freelance text*/
.lead2{
  font-size: 1.00rem !important;
  font-weight: 250 !important;
  color: black !important;
  letter-spacing: 2px !important;
}

/* The grid section headers on dark background */
.page-section .page-section-heading2 {
  font-size: 2.25rem !important;
  line-height: 2rem !important;
  color:  #ffc107!important;
  letter-spacing: 5px !important;
}

/* The grid section headers on dark background */
@media (min-width: 992px) {
  .page-section .page-section-heading2 {
    font-size: 3rem !important;
    line-height: 2.5rem !important;
  }
}

/* For the dark background line divider */ 
.divider-custom .divider-custom-line2 {
  width: 100% !important;
  max-width: 7rem !important;
  height: 0.25rem !important;
  background-color: #ffc107 !important;
  border-radius: 1rem !important;
  border-color: #2c3e50 !important;
}

.divider-custom .divider-custom-icon2 {
  color: #fec107 !important;
  font-size: 2rem !important;
}

/* Social icons for contact me */
.btn-outline-light {
  color: black;
  border-color: black;
}

/* Social contacts when hover above */ 
.btn-outline-light:hover {
  color: white;
  background:
        linear-gradient(red, transparent),
        linear-gradient(to top left, lime, transparent),
        linear-gradient(to top right, blue, transparent) !important;
    background-blend-mode: screen !important;
  border-color: white;
}

/* Configurations for the social icon moved to contact me section */
.row2 {
  display: -webkit-box !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -ms-flex-wrap: wrap !important;
  flex-wrap: wrap !important;
  margin-right: -15px !important;
  margin-left: -15px !important; 
  text-align: center !important;

}

/* In each portfolio item, this is the button to view code */
.btn-primary {
  color: black !important;
  background-color: #ffc107 !important;
  border-color: #fec107 !important;
}

/* When hover above these buttons */
.btn-primary:hover {
  color: white !important;
  background-color: black;
  border-color: white !important;
  background:
        linear-gradient(red, transparent),
        linear-gradient(to top left, lime, transparent),
        linear-gradient(to top right, blue, transparent) !important;
    background-blend-mode: screen !important;
}

/* The little x in each portfolio item */
.close{
  color: black !important; 
}

/* The little x in each portfolio item when hovering above*/
.close:hover {
  color: #000 !important; 
  text-decoration: none !important;
}

/* .modal-content {
  /*background-image: linear-gradient(#ffc107, #6f42c1, #17a2b8) !important; 
  background-image: linear-gradient(#192a56);
  background-color: #ffc107;
} */

.portfolio-modal-title{
  color: black !important;
}

/* Portfolio item when hover color */
.portfolio .portfolio-item .portfolio-item-caption{
  background-color: #ffc107;
  background:
        linear-gradient(red, transparent),
        linear-gradient(to top left, lime, transparent),
        linear-gradient(to top right, blue, transparent) !important;
    background-blend-mode: screen !important;

  opacity: 0 !important;
}

.portfolio .portfolio-item .portfolio-item-caption:hover {
  opacity: 1 !important
}

/* ----------------------------------------------
 * Generated by Animista on 2019-7-26 0:43:20
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation bg-pan-left
 * ----------------------------------------
 */


 @-webkit-keyframes bg-pan-left {
  0% {
    background-position: 100% 50% !important;
  }
  100% {
    background-position: 0% 50% !important;
  }
}
@keyframes bg-pan-left {
  0% {
    background-position: 100% 50% !important;
  }
  100% {
    background-position: 0% 50% !important;
  }
}


.bg-pan-left {
	-webkit-animation: bg-pan-left 15s infinite both !important;
	        animation: bg-pan-left 15s infinite both !important;
}

 /*To change the color when hover through sections*/
 #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
  color: black;
  background: #ffc107;
}
/*To change background color when at section but hover at the nav bar item*/
#mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
  color: white !important;
  background:
        linear-gradient(red, transparent),
        linear-gradient(to top left, lime, transparent),
        linear-gradient(to top right, blue, transparent) !important;
    background-blend-mode: screen !important;
}

/* Copyright section bottom page */
.copyright {
  background-color: black !important;

}

